--- a/src/pages/concerts-page/concerts-page.styles.scss
+++ b/src/pages/concerts-page/concerts-page.styles.scss
@@ -1,4 +1,13 @@
 .concerts-page {
   max-width: 1320px;
-  margin: 40px auto 0;
+  margin: 40px auto 100px;
+
+  h1 {
+    font-size: 2rem;
+    text-align: center;
+  }
+
+  .concerts-page-container {
+    margin: 0 10px;
+  }
 }
