--- a/src/pages/user-band-page/user-band-page.styles.scss
+++ b/src/pages/user-band-page/user-band-page.styles.scss
@@ -31,6 +31,11 @@
           font-size: 1.5rem;
         }
 
+        .description {
+          text-align: justify;
+          font-size: 1rem;
+        }
+
         .btn-wrapper {
           margin-top: 10px;
         }
