--- a/src/pages/concert-page/concert-page.styles.scss
+++ b/src/pages/concert-page/concert-page.styles.scss
@@ -14,6 +14,11 @@
       img {
         width: 100%;
       }
+
+      svg {
+        width: 100%;
+        height: auto;
+      }
     }
 
     .description-container {
