--- a/src/pages/concerts-page/components/concert.styles.scss
+++ b/src/pages/concerts-page/components/concert.styles.scss
@@ -25,6 +25,11 @@
         width: 100%;
         object-fit: scale-down;
       }
+
+      svg {
+        width: 100%;
+        height: auto;
+      }
     }
 
     // .description {
