--- a/src/pages/user-artist-page/user-artist.styles.scss
+++ b/src/pages/user-artist-page/user-artist.styles.scss
@@ -27,6 +27,10 @@
           margin-right: 10px;
         }
 
+        .description {
+          font-size: 1rem;
+        }
+
         p {
           margin: 0;
         }
