--- a/src/pages/band-page/band-page.styles.scss
+++ b/src/pages/band-page/band-page.styles.scss
@@ -1,5 +1,6 @@
 .band-page {
   max-width: 1200px;
+  width: 100%;
   margin: 40px auto 0;
   display: flex;
   flex-direction: column;
@@ -10,6 +11,10 @@
     .image-container {
       max-width: 400px;
       margin: 0 auto;
+
+      svg {
+        max-height: 250px;
+      }
 
       img {
         width: 100%;
@@ -25,7 +30,57 @@
 
       p {
         margin: 5px 0;
-        font-size: 1.3rem;
+        font-size: 1.2rem;
+      }
+    }
+
+    .concert-container {
+      margin-top: 20px;
+      margin-bottom: 100px;
+
+      .concert-link {
+        display: flex;
+        flex-direction: column;
+        padding: 5px;
+        border: 1px solid grey;
+        border-radius: 5px;
+
+        p {
+          margin: 0;
+        }
+
+        &:hover {
+          color: slategray;
+          border-color: slategray;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .band-page {
+    .band-page-container {
+      .image-container {
+        max-width: 695px;
+
+        svg {
+          max-height: 390px;
+        }
+      }
+
+      .concert-container {
+        .concert-link {
+          margin-bottom: 10px;
+
+          .date-time {
+            display: flex;
+
+            p {
+              flex: 1;
+            }
+          }
+        }
       }
     }
   }
