--- a/src/pages/artists-page/components/artist.styles.scss
+++ b/src/pages/artists-page/components/artist.styles.scss
@@ -1,25 +1,29 @@
 .artists-page-artist {
-  margin-top: 40px;
+  margin: 10px 5px;
   border: 1px solid lightgrey;
   display: flex;
   flex-direction: column;
   padding: 5px;
   border-radius: 5px;
+  width: auto;
+
+  &:hover {
+    color: slategray;
+  }
 
   .artists-page-artist-container {
     width: 100%;
 
     .image {
-      max-width: 300px;
-      max-height: 200px;
-      min-height: 150px;
+      width: 300px;
+      height: 450px;
       margin: 0 auto;
       display: flex;
       justify-content: center;
 
       img {
         width: 100%;
-        object-fit: scale-down;
+        object-fit: cover;
       }
 
       .altImg {
@@ -32,31 +36,24 @@
       display: flex;
       flex-direction: column;
       justify-content: space-around;
+
+      p {
+        margin: 0;
+      }
     }
   }
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 576px) {
   .artists-page-artist {
-    .artists-page-artist-container {
-      display: flex;
-
-      .image {
-        flex: 1;
-      }
-
-      .description {
-        flex: 1;
-        margin-left: 10px;
-      }
-    }
+    margin: 20px 10px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .artists-page-artist {
     .artists-page-artist-container {
-      display: flex;
+      // display: flex;
 
       .image {
         max-width: 600px;
