--- a/src/pages/concerts-page/components/concert.styles.scss
+++ b/src/pages/concerts-page/components/concert.styles.scss
@@ -1,28 +1,24 @@
 .concerts-page-concert {
   display: flex;
-  margin-bottom: 20px;
+  margin: 0 5px 20px;
   border: 1px solid lightgray;
   padding: 5px;
   border-radius: 10px;
-  width: 100%;
+  width: auto;
 
   &:hover {
     color: lightslategray;
   }
 
   .concert-container {
-    // width: 100%;
     margin: 0 auto;
 
     .image {
-      max-width: 300px;
-      // max-height: 200px;
-      // min-height: 150px;
-      // margin: 0 auto;
-      // display: flex;
-      // justify-content: center;
+      width: 290px;
 
       img {
+        border-top-right-radius: 5px;
+        border-top-left-radius: 5px;
         width: 100%;
         object-fit: scale-down;
       }
@@ -49,18 +45,21 @@
   }
 }
 
+@media screen and (min-width: 576px) {
+  .concerts-page-concert {
+    .concert-container {
+      .image {
+        width: 400px;
+      }
+    }
+  }
+}
+
 @media screen and (min-width: 992px) {
   .concerts-page-concert {
     .concert-container {
-      display: flex;
-
       .image {
-        flex: 1;
-      }
-
-      .description {
-        flex: 1;
-        margin-left: 10px;
+        width: 450px;
       }
     }
   }
@@ -69,10 +68,10 @@
 @media screen and (min-width: 1200px) {
   .concerts-page-concert {
     .concert-container {
-      display: flex;
+      // display: flex;
 
       .image {
-        max-width: 400px;
+        width: 550px;
       }
     }
   }
