--- a/src/pages/concerts-page/concerts-page.styles.scss
+++ b/src/pages/concerts-page/concerts-page.styles.scss
@@ -8,6 +8,9 @@
   }
 
   .concerts-page-container {
-    margin: 0 10px;
+    margin: 30px 0 100px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
   }
 }
