--- a/src/pages/bands-page/components/band.styles.scss
+++ b/src/pages/bands-page/components/band.styles.scss
@@ -23,7 +23,9 @@
 
       img {
         width: 100%;
-        object-fit: scale-down;
+        object-fit: cover;
+        border-top-left-radius: 5px;
+        border-bottom-left-radius: 5px;
       }
 
       svg {
