--- a/src/pages/user-concerts-page/components/user-concerts-concert.styles.scss
+++ b/src/pages/user-concerts-page/components/user-concerts-concert.styles.scss
@@ -1,7 +1,8 @@
 .user-concert {
   border: 1px solid lightgray;
+  border-radius: 5px;
   margin: 0 10px 20px;
-  padding: 0 5px;
+  padding: 5px;
   display: flex;
   flex-direction: column;
 
@@ -16,6 +17,8 @@
     display: flex;
 
     img {
+      border-bottom-left-radius: 5px;
+      border-top-left-radius: 5px;
       width: 100%;
       object-fit: scale-down;
     }
