--- a/src/pages/artists-page/components/artist.styles.scss
+++ b/src/pages/artists-page/components/artist.styles.scss
@@ -22,6 +22,8 @@
       justify-content: center;
 
       img {
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
         width: 100%;
         object-fit: cover;
       }
