--- a/src/pages/user-order-page/user.order.styles.scss
+++ b/src/pages/user-order-page/user.order.styles.scss
@@ -4,6 +4,15 @@
 
   .order-container {
     margin: 0 10px;
+
+    .pay-link {
+      display: flex;
+      margin-bottom: 10px;
+      margin-left: 5px;
+      font-weight: 700;
+      font-size: 2rem;
+    }
+
     .details {
       display: flex;
       flex-direction: column;
