--- a/src/pages/cart-payment-page/cart-payment-page.styles.scss
+++ b/src/pages/cart-payment-page/cart-payment-page.styles.scss
@@ -26,6 +26,7 @@
     margin-bottom: 20px;
 
     .ticket {
+      margin-bottom: 10px;
       display: flex;
       flex-direction: column;
       // justify-content: space-between;
