--- a/src/pages/user-concert-page/components/user-concert-ticket.styles.scss
+++ b/src/pages/user-concert-page/components/user-concert-ticket.styles.scss
@@ -85,8 +85,13 @@
           flex: 2;
         }
       }
+
       .description {
         margin-bottom: 0;
+      }
+
+      .delete-container {
+        margin-top: 5px;
       }
     }
   }
