--- a/src/pages/user-details-page/user-details-page.styles.scss
+++ b/src/pages/user-details-page/user-details-page.styles.scss
@@ -1,6 +1,17 @@
 .user-details-page {
   width: 100%;
   padding: 10px;
+
+  .delete-container {
+    .messages {
+      .error {
+        color: red;
+        margin-top: 10px;
+        font-size: 1.2rem;
+      }
+    }
+  }
+
   h1 {
     font-size: 1.5rem;
   }
