Fix styles, update readme

--- a/src/components/spinner/spinner.styles.scss
+++ b/src/components/spinner/spinner.styles.scss
@@ -1,7 +1,8 @@
 .spinner {
   position: absolute;
-  left: 40%;
-  top: 50%;
+  left: 0;
+  right: 0;
+  top: 40%;
 
   .spinner-border {
     z-index: 1;
